Starting a new approach: Text based templating

--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "underscore": "*",
     "requirejs": "*",
     "domready": "*",
-    "jsface": "*"
+    "jsface": "*",
+	"mustache": "*"
   },
   "devDependencies": {
   }
